Update color schema with new outlining

--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ h1{
   margin-top: 35%;
 }
 .centeredalt {
-  color:white;
+  color:#722D3C;
     position: absolute;
     width:100%;
     top: 120%;
@@ -180,8 +180,8 @@ h1{
 }
 
 .centeredaltschedule {
-  color:white;
-    position: absolute;
+  color:#722D3C;
+      position: absolute;
     width:100%;
     top: 15%;
     left: 5%;
