--- a/css/style.css
+++ b/css/style.css
@@ -439,9 +439,17 @@ margin-top: 40%;
 display: inline-block;
 }
 
-.column{
-  margin-top: 5px;
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
 
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
 .col-xs-5.order-xs-1{
